Add Gathering acceptance tests and improve image handling
- Add GatheringAcceptanceTest with 10 test cases covering CRUD operations
- Introduce getRepresentativeImageId() method in ContentBasicInfo, CompanyBasicInfo, and Review entities
- Refactor image retrieval logic across Content, Company, Review, and Gathering services to use new pattern
- Add null safety check in ImageService.getImageById() to prevent NullPointerException
- Update ENTITY_DEPENDENCIES.md: mark Company, Content, and Gathering as completed

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>